Fixed layout issues in yacht section

--- a/src/css/cards.css
+++ b/src/css/cards.css
@@ -12,33 +12,24 @@
   display: block;
   text-align: center;
   color: #fbfbfb;
-  margin-bottom: 40px;
+  margin: 0 auto 40px auto;
 }
 
-.br-mobile {
-  display: inline;
-}
-
-.br-tablet,
-.br-laptop {
-  display: none;
-}
-
-@media (min-width: 768px) {
-  .br-mobile {
-    display: none;
-  }
-  .br-tablet {
-    display: inline;
+@media (max-width: 375px) {
+  h2 {
+    max-width: 290px;
   }
 }
 
-@media (min-width: 1080px) {
-  .br-tablet {
-    display: none;
+@media (min-width: 376px) and (max-width: 1279px) {
+  h2 {
+    max-width: 350px;
   }
-  .br-laptop {
-    display: inline;
+}
+
+@media (min-width: 1280px) {
+  h2 {
+    max-width: 360px;
   }
 }
 
@@ -46,7 +37,7 @@
   display: flex;
   justify-content: center;
   gap: 25px;
-  max-width: 1240px;
+  /* max-width: 1280px; */
   margin: 0 auto;
 }
 
@@ -62,7 +53,8 @@
   background: #fbfbfb;
   width: 100%;
   max-width: 335px;
-  max-height: 478px;
+  height: 100%;
+  /* max-height: 478px; */
   border-radius: 24px;
   overflow: hidden;
   display: flex;
@@ -82,10 +74,15 @@
   border-radius: 24px;
   object-fit: cover;
   display: block;
-  margin: 16px auto 16px auto;
+  /* margin: 16px auto 16px auto; */
+  margin-bottom: 32px;
 }
 
 @media (max-width: 767px) {
+  .yacht-image-container {
+    padding: 16px 16px 0 16px;
+  }
+
   .list-cards {
     justify-content: center;
   }
@@ -103,6 +100,14 @@
 }
 
 @media (min-width: 768px) and (max-width: 1279px) {
+  .yacht-image-container {
+    padding: 16px;
+  }
+
+  .yacht-image {
+    margin-bottom: 32px;
+  }
+
   .list-cards {
     gap: 32px;
     justify-content: center;
@@ -121,11 +126,17 @@
 }
 
 @media (min-width: 1280px) and (max-width: 1439px) {
+  .cards-container {
+    max-width: 1181px;
+    width: 100%;
+  }
+
   .list-cards {
     display: flex;
     flex-wrap: wrap;
     gap: 25px;
-    justify-content: center;
+    justify-content: space-between;
+    flex-wrap: nowrap;
     margin: 0 auto;
   }
 
@@ -140,7 +151,7 @@
     width: 100%;
     max-width: 302px;
     height: 240px;
-    margin: 16px auto;
+    /* margin: 16px auto; */
   }
 }
 
@@ -159,7 +170,8 @@
 }
 
 .yacht-info {
-  padding: 32px;
+  /* padding: 32px; */
+  padding: 0 32px 32px 32px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -168,10 +180,23 @@
 }
 
 .yacht-header {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  padding-bottom: 16px;
+  /* padding-top: 16px; */
+}
+
+.yacht-header:after {
+  content: '';
+  position: absolute;
+  bottom: 16px;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background: rgba(4, 3, 6, 0.1);
 }
 
 .yacht-header .yacht-name {
@@ -181,6 +206,17 @@
   letter-spacing: -0.04em;
   text-transform: uppercase;
   color: #1b414b;
+  max-width: 55%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+@media (min-width: 768px) {
+  .yacht-header .yacht-name {
+    font-size: 16px;
+    line-height: 120%;
+  }
 }
 
 .yacht-category {
@@ -262,6 +298,7 @@
   margin-top: 40px;
   cursor: pointer;
   white-space: nowrap;
+  animation: stretch 0.5s ease-out forwards;
 }
 
 .btn:hover {
